@@ -1,8 +1,7 @@
 plugins {
     id("java")
-    id("org.jetbrains.kotlin.plugin.jpa") version "1.9.10"
-    id("war")
-    id("org.gretty") version "4.1.6"
+    id("org.springframework.boot") version "4.0.0-M2"
+    id("io.spring.dependency-management") version "1.1.7"
 }
 
 group = "org.example"
@@ -12,32 +11,19 @@ repositories {
     mavenCentral()
 }
 
-gretty {
-    contextPath = "/"
-    servletContainer = "tomcat10"
-    httpPort = 8080
-    httpsPort = 8443
-
-    jvmArgs = listOf(
-        "-Xmx2048m",
-        "--add-opens=java.base/java.lang=ALL-UNNAMED",
-        "--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED"
-    )
-
-    managedClassReload = false
-}
-
 dependencies {
-    // Jakarta com.servlet API
-    compileOnly("jakarta.servlet:jakarta.servlet-api:6.1.0")
 
-    // Add JSTL for Jakarta EE (Tomcat 10)
-    implementation("org.eclipse.jetty:glassfish-jstl:11.0.25")
+    // Spring boot
+    implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+    implementation("org.springframework.boot:spring-boot-starter-validation")
+    annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
 
-    // JPA + Hibernate
-    implementation("jakarta.persistence:jakarta.persistence-api:3.2.0")
-    implementation("org.hibernate:hibernate-core:7.0.6.Final")
-    annotationProcessor("org.hibernate.orm:hibernate-jpamodelgen:7.0.6.Final")
+    // Spring dev tools
+    developmentOnly("org.springframework.boot:spring-boot-devtools")
+
+    // Thymeleaf
+    implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
 
     // MSSQL JDBC driver
     implementation("com.microsoft.sqlserver:mssql-jdbc:12.10.1.jre11")
@@ -49,15 +35,11 @@ dependencies {
     // JBcrypt
     implementation("org.mindrot:jbcrypt:0.4")
 
-    testImplementation(platform("org.junit:junit-bom:5.10.0"))
-    testImplementation("org.junit.jupiter:junit-jupiter")
+    // Mail
+    implementation("org.springframework.boot:spring-boot-starter-mail")
 
-    // Jackson
-    implementation("com.fasterxml.jackson.core:jackson-databind:2.19.2")
-    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.19.2")
-
-    // Jakarta mail API
-    implementation("com.sun.mail:jakarta.mail:2.0.2")
+    // Testing
+    testImplementation("org.springframework.boot:spring-boot-starter-test")
 }
 
 tasks.test {
@@ -67,4 +49,8 @@ tasks.test {
 // Enable annotation processing
 tasks.withType<JavaCompile> {
     options.compilerArgs.add("-parameters")
+}
+
+tasks.bootRun {
+    sourceResources(sourceSets["main"])
 }
